test/fixtures/configs/projects/get/discoverByLanguage/fail/query/count.js
exports.negative = {
  url: '/discover?count=-1',
  method: 'get'
};

exports.tooHigh = {
  url: '/discover?count=101',
  method: 'get'
};

exports.notNumber = {
  url: '/discover?count=foo'
};
